@@ -2,6 +2,7 @@ v1.6
 	+ Album browsing mode, additional details in library views
 	+ Real-time searching of library (search as you type)
 	+ Fullscreen album art mode (via right-click on artwork) (mips)
+	+ Improve library searching across meta tags
 	+ Show file path in tooltip for library search results
 	+ Default to updating selected paths in library, not entire library
 	+ Drag-and-drop to copy files from Sonata to a file manager (Kamil)
